--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-	"name": "hadad-exper",
-	"type": "module",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro build",
-		"preview": "astro preview",
-		"astro": "astro"
-	},
-	"dependencies": {
-		"astro": "^2.1.7"
-	}
+  "name": "hadad-exper",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astrojs/tailwind": "^5.0.0",
+    "astro": "^3.1.1",
+    "astro-purgecss": "^3.2.1",
+    "purgecss": "^5.0.0",
+    "sass": "^1.68.0"
+  },
+  "devDependencies": {
+    "typescript": "latest"
+  }
 }
