add analytics with vercel

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^5.0.1",
     "astro": "^3.1.1",
     "astro-purgecss": "^3.2.1",
     "purgecss": "^5.0.0"
